--- a/bibliotk/catalogo/templates/base.html
+++ b/bibliotk/catalogo/templates/base.html
@@ -37,6 +37,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/cadastrolivros">Cadastro de Livros</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/visualizar_livros">Ler Livros</a>
+                    </li>
                 </ul>
             </div>
         </div>
