--- a/bibliotk/bibliotk/app/templates/app/base.html
+++ b/bibliotk/bibliotk/app/templates/app/base.html
@@ -55,7 +55,7 @@
                 <p class="mb-0">&copy; 2024 Bibliotk</p>
             </div>
             <div class="social-links">
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/G1ld0/PI2.git"><i class="fab fa-github"></i></a>
                 <!--a href="#"><i class="fab fa-linkedin"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a-->
             </div>
